<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/attach_file"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@id/button_choose_image"
        app:layout_constraintBottom_toBottomOf="@id/button_choose_image"
        app:layout_constraintStart_toStartOf="parent"

        app:srcCompat="@drawable/ic_baseline_attach_file_24"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/choose_file"
        app:layout_constraintStart_toEndOf="@id/attach_file"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_month"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintBottom_toBottomOf="@id/spinner_month"
        android:layout_height="wrap_content"/>
    <Spinner
        android:id="@+id/spinner_month"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:entries="@array/month"
        app:layout_constraintTop_toTopOf="@id/edit_text_layout_year"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_layout_year"
        app:layout_constraintStart_toEndOf="@id/select_date"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spinner_month"
        app:layout_constraintTop_toBottomOf="@id/button_choose_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_year"
            android:layout_width="match_parent"
            android:hint="@string/enter_year"
            android:inputType="number"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout_year" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_show_uploads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/show_uploads"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toEndOf="@+id/button_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>